--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,7 @@
     <br>
     <button type="submit">Login</button>
 </form>
+<p>Don't have an account? <a th:href="@{/signup}">Sign up here</a></p>
 <div th:if="${param.error}">
     <p style="color:red;">Incorrect username or password.</p>
 </div>
