--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,17 +6,24 @@
 </head>
 <body>
 <h1>User Registration</h1>
-<form action="#" th:action="@{/register}" th:object="${user}" method="post">
+<form action="#" th:action="@{/signup}" th:object="${user}" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" th:field="*{username}" required>
+    <div th:if="${usernameError}">
+        <p style="color:red;" th:text="${usernameError}"></p>
+    </div>
     <br>
     <label for="email">Email:</label>
     <input type="email" id="email" th:field="*{email}" required>
+    <div th:if="${emailError}">
+        <p style="color:red;" th:text="${emailError}"></p>
+    </div>
     <br>
     <label for="password">Password:</label>
     <input type="password" id="password" th:field="*{password}" required>
     <br>
     <button type="submit">Register</button>
 </form>
+<p>Already have an account? <a th:href="@{/login}">Login here</a></p>
 </body>
 </html>
