--- a/src/main/resources/templates/task/task-details.html
+++ b/src/main/resources/templates/task/task-details.html
@@ -5,6 +5,9 @@
     <title>Task Details</title>
 </head>
 <body>
+<div class="navbar">
+    <h1>Task management app</h1>
+</div>
 <div class="container">
     <h1>Task Details</h1>
 
