--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -5,6 +5,9 @@
     <title>Task Edit</title>
 </head>
 <body>
+<div class="navbar">
+    <h1>Task management app</h1>
+</div>
 <div class="container">
     <h1 th:if="${task == null}">Create Task</h1>
     <h1 th:if="${task != null}">Edit Task</h1>
