--- a/src/main/resources/templates/task/task-list.html
+++ b/src/main/resources/templates/task/task-list.html
@@ -5,6 +5,9 @@
     <title>Task List</title>
 </head>
 <body>
+<div class="navbar">
+    <h1>Nurmumanagement</h1>
+</div>
 <div class="container">
     <h1>Your Tasks</h1>
 
