--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,11 +3,11 @@
     /* Colors */
     --color-primary: #2563eb;
     --color-primary_hover: #1d4ed8;
-    --color-secondary: #64748b;
+    --color-secondary: #646d8b;
     --color-background-light: #ffffff;
     --color-background-dark: #f1f5f9;
     --color-text-primary: #1e293b;
-    --color-text-secondary: #556075;
+    --color-text-secondary: #5a627c;
     --color-error: #ef4444;
     --color-error-hover: #dc2626;
     --color-warning: #f59e0b;
@@ -276,7 +276,7 @@ input:focus {
     top: 0;
     left: 0;
     right: 0;
-    height: 4rem;
+    height: 4.5rem;
     background-color: var(--color-secondary);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -344,7 +344,7 @@ input:focus {
 .page-title {
     font-size: var(--font-xl);
     /*margin-bottom: var(--spacing-xl);*/
-    color: var(--color-text-primary);
+    color: var(--color-text-secondary);
 }
 
 /* Buttons */
@@ -396,7 +396,7 @@ input:focus {
 }
 
 .header-actions {
-    height: 4rem;
+    height: 6rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
@@ -449,10 +449,10 @@ input:focus {
 }
 
 .task-link{
-    color: var(--color-primary);
+    color: var(--color-text-primary);
     text-decoration: none;
     font-weight: 700;
-    font-size: var(--font-md);
+    font-size: 1.1rem;
 }
 
 .task-title{
@@ -466,6 +466,14 @@ input:focus {
     font-size: var(--font-lg);
     font-weight: 500;
     margin-bottom: var(--spacing-sm);
+}
+
+.task-details{
+    max-width: 66vw;
+    margin: 0 auto;
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    padding: var(--spacing-lg);
 }
 
 /* Task status badges */
@@ -511,6 +519,7 @@ input:focus {
     border-radius: var(--radius-md);
     font-size: var(--font-md);
     transition: border-color 0.2s;
+    margin-bottom: var(--spacing-md);
 }
 
 .form-control:focus {
@@ -525,6 +534,7 @@ input:focus {
     border-radius: var(--radius-md);
     font-size: var(--font-md);
     background-color: var(--color-background-light);
+    margin-bottom: var(--spacing-md);
 }
 
 /* Action buttons */
