--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -21,70 +21,78 @@
         </div>
     </nav>
 
-    <h1 th:if="${task == null}">Create Task</h1>
-    <h1 th:if="${task != null}">Edit Task</h1>
+    <div class="task-details">
+<!--        TODO fix 'Edit Task' even on creation-->
+        <h1 th:if="${task == null}" class="task-title">Create Task</h1>
+        <h1 th:if="${task != null}" class="task-title">Edit Task</h1>
 
-    <form th:action="@{/tasks}" method="post" th:object="${task}">
-        <input type="hidden" th:field="*{id}">
+        <form th:action="@{/tasks}" method="post" th:object="${task}">
+            <input type="hidden" th:field="*{id}">
 
-        <div>
-            <label for="title" class="form-label">Title</label>
-            <input type="text" class="form-control" id="title"
-                   th:field="*{title}" required>
-        </div>
+            <div>
+                <label for="title" class="form-label">Title</label>
+                <input type="text" class="form-control" id="title"
+                       th:field="*{title}" required>
+            </div>
 
-        <div>
-            <label for="description" class="form-label">Description</label>
-            <textarea class="form-control" id="description"
-                      th:field="*{description}" rows="3" maxlength="999"></textarea>
-        </div>
+            <div>
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" id="description"
+                          th:field="*{description}" rows="3"
+                          maxlength="999"></textarea>
+            </div>
 
-        <div>
-            <label for="dueDate" class="form-label">Due Date</label>
-            <input type="date" class="form-control" id="dueDate"
-                   th:field="*{dueDate}" required>
-        </div>
+            <div>
+                <label for="dueDate" class="form-label">Due Date</label>
+                <input type="date" class="form-control" id="dueDate"
+                       th:field="*{dueDate}" required>
+            </div>
 
-        <div>
-            <label for="category" class="form-label">Category</label>
-            <select class="form-select" id="category" th:field="*{category.id}"
-                    required>
-                <option value="">Select a category</option>
-                <option th:each="category : ${categories}"
-                        th:value="${category.id}"
-                        th:text="${category.name}"></option>
-            </select>
-        </div>
+            <div>
+                <label for="category" class="form-label">Category</label>
+                <select class="form-select" id="category"
+                        th:field="*{category.id}"
+                        required>
+                    <option value="">Select a category</option>
+                    <option th:each="category : ${categories}"
+                            th:value="${category.id}"
+                            th:text="${category.name}"></option>
+                </select>
+            </div>
 
-        <div>
-            <label for="status" class="form-label">Status</label>
-            <select class="form-select" id="status" th:field="*{status.id}"
-                    required>
-                <option value="">Select a status</option>
-                <option th:each="status : ${statuses}" th:value="${status.id}"
-                        th:text="${status.getStatus()}"></option>
-            </select>
-        </div>
+            <div>
+                <label for="status" class="form-label">Status</label>
+                <select class="form-select" id="status" th:field="*{status.id}"
+                        required>
+                    <option value="">Select a status</option>
+                    <option th:each="status : ${statuses}"
+                            th:value="${status.id}"
+                            th:text="${status.getStatus()}"></option>
+                </select>
+            </div>
 
-        <div>
-            <label for="priority" class="form-label">Priority</label>
-            <select class="form-select" id="priority" th:field="*{priority.id}"
-                    required>
-                <option value="">Select a priority</option>
-                <option th:each="priority : ${priorities}"
-                        th:value="${priority.id}"
-                        th:text="${priority.getPriority()}"></option>
-            </select>
-        </div>
+            <div>
+                <label for="priority" class="form-label">Priority</label>
+                <select class="form-select" id="priority"
+                        th:field="*{priority.id}"
+                        required>
+                    <option value="">Select a priority</option>
+                    <option th:each="priority : ${priorities}"
+                            th:value="${priority.id}"
+                            th:text="${priority.getPriority()}"></option>
+                </select>
+            </div>
 
-        <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
-            <p th:each="error : ${#fields.errors('*')}" th:text="${error}"></p>
-        </div>
+            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                <p th:each="error : ${#fields.errors('*')}"
+                   th:text="${error}"></p>
+            </div>
 
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a th:href="@{/tasks}" class="btn btn-secondary"
-        onclick="return confirm('Are you sure you want to cancel? Any unsaved changes will be lost.');">Cancel</a>
-    </form>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a th:href="@{/tasks}" class="btn btn-secondary"
+               onclick="return confirm('Are you sure you want to cancel? Any unsaved changes will be lost.');">Cancel</a>
+        </form>
+    </div>
 </div>
 </body>
 </html>
