--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,6 +11,7 @@
     --color-error: #ef4444;
     --color-error-hover: #dc2626;
     --color-warning: #f59e0b;
+    --color-warning-hover: #de8f0a;
     --color-success: #10b981;
     --color-success-hover: #0d9669;
     --color-border: #e2e8f0;
@@ -576,8 +577,8 @@ input:focus {
     }
 }
 
-.complete-btn {
-    background-color: var(--color-success);
+.action-btn {
+    background-color: var(--color-primary);
     color: white;
     padding: var(--spacing-sm) var(--spacing-md);
     margin-right: auto;
@@ -585,6 +586,22 @@ input:focus {
     overflow: hidden; /* Hide overflow content */
 }
 
+.action-btn:hover {
+    background-color: var(--color-primary_hover);
+}
+
+.complete-btn {
+    background-color: var(--color-success);
+}
+
 .complete-btn:hover {
     background-color: var(--color-success-hover);
+}
+
+.incomplete-btn {
+    background-color: var(--color-warning);
+}
+
+.incomplete-btn:hover {
+    background-color: var(--color-warning-hover);
 }
