--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -334,6 +334,30 @@ input:focus {
     background-color: var(--color-text-primary);
 }
 
+.scroll-page-btn {
+    background-color: var(--color-table-header);
+    color: var(--color-secondary);
+    padding: var(--spacing-sm) var(--spacing-md);
+    max-height: 3rem; /* Set the maximum height of the button */
+    overflow: hidden; /* Hide overflow content */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+}
+
+.scroll-page-btn:hover {
+    background-color: var(--color-secondary);
+    color: white;
+    opacity: 0.5;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: var(--spacing-md); /* Add spacing on the top */
+}
+
 /* Main container */
 .container {
     max-width: 1200px;
@@ -344,8 +368,13 @@ input:focus {
 /* Page title */
 .page-title {
     font-size: var(--font-xl);
-    /*margin-bottom: var(--spacing-xl);*/
-    color: var(--color-text-secondary);
+    color: var(--color-text-primary);
+}
+
+.page-counter {
+    color: var(--color-secondary);
+    font-weight: 500;
+    margin-left: var(--spacing-xs);
 }
 
 /* Buttons */
