--- a/src/main/resources/templates/task/task-details.html
+++ b/src/main/resources/templates/task/task-details.html
@@ -7,27 +7,26 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<div class="navbar">
-    <h1>Task management app</h1>
-</div>
-<div class="container">
-    <nav id="navbar">
-        <a href="/tasks" class="btn back-btn">Back to Task List</a>
-        <div class="nav-brand">Nurmumanagement</div>
-        <div class="nav-user">
+<nav id="navbar">
+    <a href="/tasks" class="btn back-btn">Back to Task List</a>
+    <div class="nav-brand">Nurmumanagement</div>
+    <div class="nav-user">
+        <a href="/profile" class="username">
             <span class="username" th:text="${username}"></span>
-            <form th:action="@{/logout}" method="post">
-                <button type="submit" class="btn logout-btn">Logout</button>
-            </form>
-        </div>
-    </nav>
+        </a>
+        <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn logout-btn">Logout</button>
+        </form>
+    </div>
+</nav>
 
+<div class="container">
     <div class="task-details">
         <h1 th:text="${task.getTitle()}" class="task-title"></h1>
         <p class="task-property"><strong>Description: </strong><span
                 th:text="${task.getDescription()}"></span></p>
         <p class="task-property"><strong>Due Date: </strong><span
-                th:text="${task.getDueDate()}"></span></p>
+                th:text="${#temporals.format(task.getDueDate(), 'E, MMM d, yyyy')}"></span></p>
         <p class="task-property"><strong>Status: </strong><span
                 th:text="${task.getStatus()}"></span></p>
         <p class="task-property"><strong>Priority: </strong><span
@@ -53,7 +52,6 @@
            class="btn btn-danger"
            onclick="return confirm('Are you sure? This action cannot be undone.');">Delete</a>
     </div>
-
 </div>
 </body>
 </html>
