--- a/src/main/resources/templates/task/task-list.html
+++ b/src/main/resources/templates/task/task-list.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task List</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/task-list.js"></script>
 </head>
 <body>
 <nav id="navbar">
@@ -25,9 +26,9 @@
             <h1 class="page-title">Tasks
                 <span class="page-counter" th:if="${!#lists.isEmpty(tasks)}" th:text="'(' + (${currentPage + 1}) + '/' + ${totalPages} + ')'"></span>
             </h1>
-            <form th:action="@{/tasks}" method="get" class="search-form">
+           <form th:action="@{/tasks}" method="get" class="search-form">
                 <input type="text" name="search" placeholder="Search tasks..." th:value="${search}" class="search-input">
-                <button type="submit" class="btn scroll-page-btn">Search</button>
+                <button type="submit" class="btn scroll-page-btn" th:text="${#strings.isEmpty(search) ? 'Search' : 'Clear Search'}"></button>
             </form>
             <form th:action="@{/tasks/new}" method="get">
                 <button type="submit" class="btn btn-primary">Create New Task</button>
