--- a/src/main/resources/templates/task/task-edit.html
+++ b/src/main/resources/templates/task/task-edit.html
@@ -34,7 +34,7 @@
             </div>
 
             <div>
-                <label for="description" class="form-label">Description</label>
+                <label for="description" class="form-label">Description (optional)</label>
                 <textarea class="form-control" id="description"
                           th:field="*{description}" rows="3"
                           maxlength="999"></textarea>
@@ -44,6 +44,12 @@
                 <label for="dueDate" class="form-label">Due Date</label>
                 <input type="date" class="form-control" id="dueDate"
                        th:field="*{dueDate}" required>
+            </div>
+
+            <div class="form-group">
+                <label for="dueTime" class="form-label">Due Time (optional)</label>
+                <input type="time" class="form-control" id="dueTime"
+                       name="dueTime" th:field="*{dueTime}">
             </div>
 
             <div>
