--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -165,6 +165,12 @@ input:focus {
     text-decoration: underline;
 }
 
+.input-links {
+    margin-top: var(--spacing-xs);
+    text-align: left;
+    font-size: var(--font-sm);
+}
+
 .error-message {
     margin-top: var(--spacing-sm);
     padding: var(--spacing-sm);
@@ -380,6 +386,24 @@ input:focus {
     padding: 0 var(--spacing-xl);
 }
 
+.recovery-container {
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center;   /* Centers vertically */
+    height: 100vh;         /* Set container height (e.g., full viewport height) */
+    flex-direction: column; /* Centers all nested items */
+}
+
+.recovery-form {
+    width: 35%;
+    border-collapse: collapse;
+    background-color: var(--color-background-light);
+    border-radius: var(--radius-lg);
+    overflow: hidden;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    padding: var(--spacing-md);
+}
+
 /* Page title */
 .page-title {
     font-size: var(--font-xl);
@@ -404,6 +428,7 @@ input:focus {
     transition: all 0.2s;
     text-decoration: none;
     border: none;
+    text-align: center;
 }
 
 .btn-primary {
